# Circle-Detector

./: CMakeLists.txt  README.md  compile.cmd  linuxScript  run.cmd
src/: drawing.cpp  filters.cpp  main.cpp
src/includes/: drawing.h  filters.h  main.h
